<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.rouif.sebastien.circleci.MainActivity">

    <Button
        android:id="@+id/force_crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_crash" />

    <Button
        android:id="@+id/button_verbose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_verbose" />

    <Button
        android:id="@+id/button_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_debug" />

    <Button
        android:id="@+id/button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_info" />

    <Button
        android:id="@+id/button_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_warn" />

    <Button
        android:id="@+id/button_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_error" />

    <Button
        android:id="@+id/button_assert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_assert" />

</LinearLayout>
